[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="labelOutput" type="Label" parent="."]
margin_left = 232.0
margin_top = 108.0
margin_right = 799.0
margin_bottom = 195.0
autowrap = true

[node name="lineEditUserInput" type="LineEdit" parent="."]
margin_left = 143.0
margin_top = 351.0
margin_right = 564.0
margin_bottom = 418.0
placeholder_text = "Digite um texto para adicionar Ã  lista"

[node name="btnSubmit" type="Button" parent="."]
margin_left = 581.0
margin_top = 352.0
margin_right = 708.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 116, 36 )
text = "Enviar"

[node name="btnPreFilled" type="Button" parent="."]
margin_left = 728.0
margin_top = 352.0
margin_right = 886.0
margin_bottom = 421.0
text = "Mostrar Lista Existente"

[connection signal="pressed" from="btnSubmit" to="." method="_on_btnSubmit_pressed"]
[connection signal="pressed" from="btnPreFilled" to="." method="_on_btnPreFilled_pressed"]
